--- a/app/capdemoui/webapp/view/View1.view.xml
+++ b/app/capdemoui/webapp/view/View1.view.xml
@@ -3,19 +3,47 @@
     xmlns="sap.m"
     xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
     xmlns:smartTable="sap.ui.comp.smarttable"
-    xmlns:html="http://www.w3.org/1999/xhtml">
+    xmlns:html="http://www.w3.org/1999/xhtml"
+    xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
-        <content >
-            <smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="Books" persistencyKey="SmartFilter_Explored"/>
-            <smartTable:SmartTable id="_IDGenSmartTable1" entitySet="Books" smartFilterId="smartFilterBar" tableType="ResponsiveTable" useExportToExcel="true" beforeExport="onBeforeExport" useVariantManagement="true" useTablePersonalisation="true" header="Books" showRowCount="true" persistencyKey="SmartTableAnalytical_Explored" enableAutoBinding="true" demandPopin="true" class="sapUiResponsiveContentPadding" enableAutoColumnWidth="true" editTogglable="true">
-                	<smartTable:customToolbar>
-			            <OverflowToolbar>
-				            <ToolbarSpacer/>
-				            <Button text="Select" press="onColumns"/>
-			            </OverflowToolbar>
-		            </smartTable:customToolbar>
+        <content>
+            <smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="Books" persistencyKey="SmartFilter_Explored" />
+            <smartTable:SmartTable id="_IDGenSmartTable1" entitySet="Books" smartFilterId="smartFilterBar" requestAtLeastFields="author,title" tableType="ResponsiveTable" useExportToExcel="true" beforeExport="onBeforeExport" useVariantManagement="true" useTablePersonalisation="true" header="Books" showRowCount="true" persistencyKey="SmartTableAnalytical_Explored" enableAutoBinding="true" demandPopin="true" class="sapUiResponsiveContentPadding" enableAutoColumnWidth="true" editTogglable="true">
+                <smartTable:customToolbar>
+                    <OverflowToolbar id="_IDGenOverflowToolbar1">
+                        <ToolbarSpacer id="_IDGenToolbarSpacer1" />
+                        <Button id="_IDGenButton1" text="Select" press="onColumns" />
+                    </OverflowToolbar>
+                </smartTable:customToolbar>
                 <Table id="_IDGenTable1" mode="MultiSelect">
-                    <ColumnListItem id="_IDGenColumnListItem1" type="Navigation" press="onNavigationPress"/>
+                    <items>
+                        <ColumnListItem id="_IDGenColumnListItem1" type="Navigation" press="onNavigationPress" />
+                    </items>
+                    <!-- <columns>
+                        <Column id="ExtraColumn" hAlign="Begin">
+                            <customData>
+                                <core:CustomData id="_IDGenCustomData1" key="p13nData" value='\{"columnKey": "review", "columnIndex": 6, "leadingProperty": "review", "sortProperty": "review"}' />
+                            </customData>
+                            <Text id="_IDGenText1" text="Review" />
+                        </Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem id="_IDGenColumnListItem2" type="Navigation" press="onNavigationPress">
+                            <ObjectStatus id="_IDGenObjectStatus1" text="{review}" state="{path: 'review', formatter: '.formatter.reviewStatus'}"/>
+                        </ColumnListItem>
+                    </items> -->
+                    <columns>
+                        <Column>
+                            <Label text="Author Name - Book"/>
+                        </Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem>
+                            <cells>
+                                <ObjectIdentifier text="{author} -- {title}"/>
+                            </cells>
+                        </ColumnListItem>
+                    </items>
                 </Table>
             </smartTable:SmartTable>
         </content>
